--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Yeoman generator for Python modules",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "flushot/generator-python",
+  "repository": "alejandrogallo/generator-python",
   "author": {
-    "name": "Chris Lyon",
-    "email": "flushot@gmail.com",
-    "url": "https://github.com/Flushot"
+    "name": "Alejandro Gallo",
+    "email": "alejandroamsg@gmail.com",
+    "url": "https://github.com/alejandrogallo"
   },
   "engines": {
     "node": ">=0.10.0"
