added sphinx init part in the Makefile

--- a/app/templates/Makefile
+++ b/app/templates/Makefile
@@ -8,10 +8,13 @@ test:
 	python setup.py test
 doc-html:
 	make -C doc/ html
+	#nojekyll for gh-pages
+	touch doc/build/html/.nojekyll
 update-gh-pages:
 	@echo "Warning: Black magic in action"
 	git push origin `git subtree split --prefix doc/build/html/ master`:gh-pages --force
-
+init-sphinx:
+	sphinx-quickstart --no-batchfile --project <<<APP_NAME>>> --author <<<AUTHOR_NAME>>> --makefile --ext-autodoc
 
 .PHONY: deps
 
