--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-python",
+  "name": "generator-python-ghpages",
   "version": "1.0.0",
   "description": "Yeoman generator for Python modules",
   "license": "MIT",
